common-applications/test-environment/mindspore-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-website2
  name: mindspore-website2
